# jajang

./: .gitignore  CLAUDE.md  backlog.md  package-lock.json  package.json  prd.md  trd.md
apps/api/: .env.example  alembic.ini  jajang_dev.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_auth_tables.py  0002_voice_samples.py  0003_generated_tracks.py  0004_rewarded_ad_usage.py  0005_add_audit_logs.py  0006_dsp_recording_model.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: celery_app.py  celery_config.py  config.py  constants.py  db.py  security.py
apps/api/app/models/: __init__.py  audit_log.py  base.py  generated_track.py  generation_counter.py  master_audio.py  recording.py  recording_session.py  rewarded_ad_usage.py  subscription.py  user.py  voice_sample.py
apps/api/app/schemas/: auth.py  generations.py  recordings.py  rewarded.py  sessions.py  songs.py  tracks.py  users.py  webhooks.py
apps/api/app/services/: account_deletion_service.py  auth_service.py  counter_repo.py  counter_service.py  entitlement_service.py  generation_service.py  masters_service.py  quality_check_service.py  recording_service.py  (+7 more)
apps/api/scripts/: m0_dsp_self_test.py  spike_ns1_afftdn_perceptual.py
apps/api/tests/: conftest.py  test_account_deletion.py  test_clip_cleanup.py  test_data_export_deferred.py  test_dsp_processing_task.py  test_dsp_service.py  test_entitlement.py  test_masters_service.py  test_migration_0006.py  test_mock_s3_recordings.py  test_mock_s3_storage.py  test_sessions_api.py  test_songs_preview.py
(+524 files in other folders)
